Updated the classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ ADD_LIBRARY(${PROJECT_NAME} SHARED
     src/dqrobotics/interfaces/vrep/DQ_VrepRobot.cpp
     src/dqrobotics/interfaces/vrep/robots/LBR4pVrepRobot.cpp
     src/dqrobotics/interfaces/vrep/robots/YouBotVrepRobot.cpp
+    src/dqrobotics/interfaces/vrep/robots/FrankaEmikaPandaVrepRobot.cpp
     coppeliarobotics/remoteApi/extApi.c
     coppeliarobotics/remoteApi/extApiPlatform.c
     )
@@ -73,6 +74,7 @@ INSTALL(FILES
 INSTALL(FILES
     include/dqrobotics/interfaces/vrep/robots/LBR4pVrepRobot.h
     include/dqrobotics/interfaces/vrep/robots/YouBotVrepRobot.h
+    include/dqrobotics/interfaces/vrep/robots/FrankaEmikaPandaVrepRobot.h
     DESTINATION "include/dqrobotics/interfaces/vrep/robots")
 
 ################################################################
@@ -90,4 +92,5 @@ INSTALL(FILES
 INSTALL(FILES
     src/dqrobotics/interfaces/vrep/robots/LBR4pVrepRobot.cpp
     src/dqrobotics/interfaces/vrep/robots/YouBotVrepRobot.cpp
+    src/dqrobotics/interfaces/vrep/robots/FrankaEmikaPandaVrepRobot.cpp
     DESTINATION "src/dqrobotics/interfaces/vrep/robots")
